fixed misaligned embed button

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -143,13 +143,6 @@
   padding-top: 8px;
 }
 
-.projects-self-embed-button {
-
-  &.active {
-    background-color: $secondary-green;
-    color: $white;
-  }
-}
 
 .projects-embed-text-container {
   padding-left: 5px;
